--- a/client/src/components/Travellers/Travellers.module.scss
+++ b/client/src/components/Travellers/Travellers.module.scss
@@ -23,6 +23,7 @@ $accent: #60a0f9;
         button {
             border: none;
             background-color: transparent;
+            color: black;
             font-size: 1.6rem;
             cursor: pointer;
             display: block;
