--- a/client/src/components/FormTemplate/FormTemplate.module.scss
+++ b/client/src/components/FormTemplate/FormTemplate.module.scss
@@ -11,11 +11,14 @@ $accent: #60a0f9;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     // Center an absolute div
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+
+    // For animation 
+    transform: translate(-50%, -1500%);
+    transition: all 0.2s;
+    opacity: 0;
     
     input, textarea, select  {
         font-size: 1.1rem;
@@ -36,7 +39,6 @@ $accent: #60a0f9;
     }
 
     input[type="submit"], button {
-        height: 100%;
         padding: 10px;
         border: none;
         border-radius: 5px;
@@ -48,11 +50,17 @@ $accent: #60a0f9;
         background-color: #deecff;
     }
 
-    .option {
-        border: 1px solid rgb(165, 165, 165);
-        border-radius: 5px;
-        padding: 10px 20px;
-        margin: 10px;
-        cursor: pointer;
-    }
+}
+
+.showForm {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+}
+
+.option {
+    border: 1px solid rgb(165, 165, 165);
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
 }
