--- a/client/src/components/Profile/Profile.module.scss
+++ b/client/src/components/Profile/Profile.module.scss
@@ -49,7 +49,7 @@ $accent: #60a0f9;
     border: none;
     background-color: $accent;
     color: white;
-    padding: 5px;
+    padding: 5px 25px;
     border-radius: 5px;
     font-size: 14px;
 }
