Updated nav for larger screens

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,9 +3,9 @@ $accent: #60a0f9;
 .App {
   position:absolute;
   width:100%;
-  background: #4B79A1;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to top, #283E51, #0A2342);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to top, #283E51, #0A2342); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: -olinear-gradient(to top, #283E51, #0A2342); 
   min-height: 100vh;
+  // background: #4B79A1;
+  // background: -webkit-linear-gradient(to top, #283E51, #0A2342);
+  // background: linear-gradient(to top, #283E51, #0A2342);
+  // background: -olinear-gradient(to top, #283E51, #0A2342); 
 }
