--- a/client/src/components/Travellers/Travellers.module.scss
+++ b/client/src/components/Travellers/Travellers.module.scss
@@ -8,26 +8,52 @@ $accent: #60a0f9;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
 
-    .userImg {
-        width: 100px;
-        height: 100px;
-        margin-right: 5px;
-    }
+    
+}
 
-    .travellerActions {
-        display: flex;
-        justify-content: center;
-        align-items:flex-end;
-        flex-direction: column;
+.userImg {
+    width: 100px;
+    height: 100px;
+    margin-right: 5px;
+}
 
-        button {
-            border: none;
-            background-color: transparent;
-            color: black;
-            font-size: 1.6rem;
-            cursor: pointer;
-            display: block;
-            margin-bottom: 5px;
-        }
+.travellerActions {
+    display: flex;
+    justify-content: center;
+    align-items:flex-end;
+    flex-direction: column;
+
+    button {
+        border: none;
+        background-color: transparent;
+        color: black;
+        font-size: 1.6rem;
+        cursor: pointer;
+        display: block;
+        margin-bottom: 5px;
     }
 }
+
+.largerScreens {
+    display: none;
+}
+
+
+@media( min-width: 768px ) {
+    .smallerScreens {
+        display: none;
+    }
+
+    .largerScreens {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        border: 1px solid #eaeaea;
+        border-radius: 5px;
+    }
+    
+    .travellerList {
+        height: 75vh;
+        overflow: auto; /*enable scrollbar */
+    }
+
+} 
