--- a/client/src/components/Chat/Chat.module.scss
+++ b/client/src/components/Chat/Chat.module.scss
@@ -4,7 +4,7 @@ $accent: #60a0f9;
 .chat {
     position: relative;
     width: 100%;
-    // min-height: 100vh;
+    height: 90vh;
 }
 
 .chatHeader {
@@ -18,21 +18,23 @@ $accent: #60a0f9;
     border-bottom: 1px solid $accent;
     background-color: rgb(255, 255, 255);
 
-    .userImg {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-        margin-left: 30px;
-        margin-right: 10px;
-    }
-    
-    .userName {
-        font-size: 1.2rem;
-    }
+}
+
+.userImg {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-left: 30px;
+    margin-right: 10px;
+}
+
+.userName {
+    font-size: 1.2rem;
 }
 
 .chatBody {
-    min-height: 100vh;
+    min-height: 100%;
+    overflow: auto;
     padding-bottom: 100px;
     position: relative;
     display: flex;
@@ -45,34 +47,33 @@ $accent: #60a0f9;
     border-radius: 25px;
     padding: 5px;
     height: 5vh;
-    width: 95%;
+    width: 96%;
     max-width: 770px;
-    position: fixed;
+    position: sticky;
     bottom: 0;
     z-index: 2;
     // Center fixed element
-    left: 50%;
-    transform: translate(-50%, -10%);
+    transform: translate(0.5%, -10%);
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: rgb(255, 255, 255);
 
-    .chatInput {
-        border: none;
-        background-color: transparent;
-        height: 100%;
-        width: 85%;
-        padding-left: 15px;
-        font-size: 1rem;
-        border-radius: 25px 0 0 25px;
-
-        &:focus {
-            outline: none;
-        }
-    }
 }
 
+.chatInput {
+    border: none;
+    background-color: transparent;
+    height: 100%;
+    width: 85%;
+    padding-left: 15px;
+    font-size: 1rem;
+    border-radius: 25px 0 0 25px;
+
+    &:focus {
+        outline: none;
+    }
+}
 .bubble {
     // border: 1px solid black;
     background-color: #cbcbcb;
@@ -95,3 +96,17 @@ $accent: #60a0f9;
     margin-left: auto;
     // order: 2;
 }
+
+@media( min-width: 768px ) {
+
+    .chat {
+        border-left: 1px solid #eaeaea;
+        height: 75vh;
+        overflow: auto; /*enable scrollbar */
+    }
+
+    .chatInputContainer {
+        transform: translate(1.5%, -10%);
+    }
+
+} 
