updated popups for larger screens

--- a/client/src/components/Profile/Profile.module.scss
+++ b/client/src/components/Profile/Profile.module.scss
@@ -90,3 +90,7 @@ $accent: #60a0f9;
     border-radius: 0 5px 5px 0 !important;
     text-transform: uppercase;
 }
+
+@media( min-width: 768px ) {
+    
+}
