--- a/client/src/components/FormTemplate/FormTemplate.module.scss
+++ b/client/src/components/FormTemplate/FormTemplate.module.scss
@@ -64,3 +64,9 @@ $accent: #60a0f9;
     margin: 10px;
     cursor: pointer;
 }
+
+@media( min-width: 768px ) {
+    .formTemplate {
+        width: 50%;
+    }
+}
