--- a/client/src/components/Profile/Profile.module.scss
+++ b/client/src/components/Profile/Profile.module.scss
@@ -91,6 +91,23 @@ $accent: #60a0f9;
     text-transform: uppercase;
 }
 
+.deleteP {
+    color: red;
+    text-decoration: underline;
+    cursor: pointer;
+    margin-top: 10px;
+    text-align: right;
+}
+
+.verifyDelete {
+    text-align: center;
+
+    div button:first-child {
+        background-color: red;
+        margin-right: 10px;
+    }
+}
+
 @media( min-width: 768px ) {
     
 }
